# one

./: .gitignore  Cargo.toml  README.md  README_CN.md
crates/one_bridge/: Cargo.toml
crates/one_bridge/src/: bootstrap.js  lib.rs  ops.rs  runtime.rs  sentinel_api.rs
crates/one_bridge/src/extensions/: ast.rs  core.rs  dictionary.rs  fetch.rs  fs.rs  mod.rs  monitor.rs  network.rs  tls.rs
crates/one_cli/: Cargo.toml
crates/one_cli/src/: main.rs
crates/one_compiler/: Cargo.toml
crates/one_compiler/src/: codeblock.rs  compiler.rs  lib.rs  opcode.rs  peephole.rs
crates/one_core/: Cargo.toml
crates/one_core/src/: convert.rs  error.rs  gc_ptr.rs  intern.rs  lib.rs  value.rs
crates/one_engine/: Cargo.toml
crates/one_engine/src/: builder.rs  engine.rs  extension.rs  lib.rs  limits.rs  module_resolver.rs  preset.rs  serde.rs  type_map.rs
crates/one_engine/tests/: m1_hello_world.rs
crates/one_gc/: Cargo.toml
crates/one_gc/src/: gc.rs  header.rs  heap.rs  lib.rs  trace.rs
crates/one_parser/: Cargo.toml
crates/one_parser/src/: arena.rs  lib.rs  span.rs  token.rs
crates/one_parser/src/ast/: decl.rs  expr.rs  mod.rs  pat.rs  stmt.rs
crates/one_parser/src/lexer/: mod.rs  number.rs  string.rs
crates/one_parser/src/parser/: expr.rs  mod.rs  module.rs  prescan.rs  stmt.rs  typescript.rs
crates/one_runtime/: Cargo.toml
crates/one_runtime/src/: array.rs  boolean.rs  collections.rs  console.rs  date.rs  error.rs  globals.rs  json.rs  lib.rs  math.rs  number.rs  object.rs  preset.rs  promise.rs  regexp.rs  string.rs  symbol.rs  timers.rs  weakref.rs
crates/one_runtime/src/net/: dns.rs  fetch.rs  mod.rs  tcp.rs  tls.rs  ws.rs
crates/one_vm/: Cargo.toml
crates/one_vm/src/: convert.rs  lib.rs  object.rs  shape.rs  vm.rs
docs/superpowers/plans/: 2026-05-22-phase1a-one-core.md
docs/superpowers/specs/: 2026-05-22-one-js-runtime-design.md
